# zero-vram-spec

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.vllm  README.md  analyze_humaneval_accounting.py  cli.py  compare_runs.py  comparison_new.csv  comparison_new2.csv  demo_baseline.py  demo_speculative.py  diagnose.py  dsa_report.py  dsa_trace_new.csv  humaneval_adaptive_k_report.md  humaneval_comparison_report.md  nemotron_cpu_dsa_trace_k1_rebuild_3x80.csv  nemotron_debug_cpu_k1.csv  nemotron_engineering_dsa_tokens.json  nemotron_greedy_output_01.txt  nemotron_greedy_output_02.txt  nemotron_greedy_output_03.txt  nemotron_greedy_output_04.txt  nemotron_greedy_output_05.txt  nemotron_no_spec_loop.csv  nemotron_token_structure_report.md  original_script.py  pyproject.toml  qwen_coder_dsa_tokens.json  qwen_dsa_pattern_spec_from_scratch.py  qwen_dsa_pattern_spec_from_scratch_branch.py  qwen_spec_tier_report_indent_k12.csv  qwen_spec_trace_indent_k1.csv  qwen_spec_trace_indent_k12.csv  qwen_spec_trace_k12_now.csv  run_humaneval_benchmark.py  stat_compare.py  stat_compare_report.csv  structspec_indent_k12_report.md
humaneval_results/: humaneval_outputs.jsonl  humaneval_rejections.csv  humaneval_report.md  humaneval_summary.json  humaneval_tier_summary.csv  humaneval_trace.csv
humaneval_results_adaptive/: humaneval_outputs.jsonl  humaneval_rejection_diffs.csv  humaneval_rejections.csv  humaneval_report.md  humaneval_summary.json  humaneval_tier_summary.csv  humaneval_token_accounting_by_task.csv  humaneval_token_accounting_report.md  humaneval_trace.csv
humaneval_results_adaptive_balanced/: humaneval_outputs.jsonl  humaneval_rejection_diffs.csv  humaneval_rejections.csv  humaneval_report.md  humaneval_summary.json  humaneval_tier_summary.csv  humaneval_token_accounting_by_task.csv  humaneval_token_accounting_report.md  humaneval_trace.csv
humaneval_results_fresh/: humaneval_rejections.csv  (+3 more)
(+34 files in other folders)
