[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structspec"
version = "0.1.0"
description = "Zero-VRAM speculative decoding proxy and tooling for local LLM backends."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Structspec contributors" }]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
tui = ["textual>=0.80"]
vllm = ["vllm>=0.6"]
dev = ["pytest>=8"]

[project.scripts]
structspec = "structspec.cli:main"

[tool.setuptools.packages.find]
include = ["structspec*"]
