[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structspec"
version = "0.1.0"
description = "Zero-VRAM speculative decoding proxy and tooling for local LLM backends."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Structspec contributors" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.27",
  "numpy>=1.24",
]

[project.optional-dependencies]
tui = ["textual>=0.80"]
vllm = ["vllm>=0.6"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]
research = ["llama-cpp-python>=0.3", "numpy>=1.24"]

[project.scripts]
structspec = "structspec.cli:main"

[project.urls]
Repository = "https://github.com/neerajcodes8888/Zero_vram_spec"
Issues = "https://github.com/neerajcodes8888/Zero_vram_spec/issues"

[tool.setuptools.packages.find]
include = ["structspec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701", "E702"]

[tool.ruff.lint.isort]
known-first-party = ["structspec"]
